[Fix]: appointment delay nnotification
